FIX Gallery items not showing in multi edit [SDESK-6430]

--- a/scripts/apps/authoring/styles/multiedit.scss
+++ b/scripts/apps/authoring/styles/multiedit.scss
@@ -151,3 +151,7 @@ $top-offset: 48px;
 .subnav--multiedit-screen {
     top: 0;
 }
+
+#workspace-container .main-article .owl-stage-outer.owl-height{
+    width: 577px  !important;
+}
